apps/frontend-v2/deployment-parksmap.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: parksmap
  labels:
    app: workshop
    app.kubernetes.io/part-of: workshop
    app.kubernetes.io/instance: parksmap
    app.kubernetes.io/component: parksmap
    app.openshift.io/runtime: rh-spring-boot
    role: frontend
    app.kubernetes.io/name: parksmap
    component: parksmap
spec:
  replicas: 2
  selector:
    matchLabels:
      app: parksmap
  template:
    metadata:
      labels:
        app: parksmap
        component: parksmap
        deployment: parksmap
        role: frontend
    spec:
      containers:
        - name: parksmap
          image: 'quay.io/openshiftroadshow/parksmap:latest'
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
